# Datus-adapters-clickzetta

./: README.md  pyproject.toml
datus-clickzetta/: README.md  pyproject.toml  test.py
datus-clickzetta/datus_clickzetta/: __init__.py  config.py  connector.py
datus-clickzetta/tests/: FINAL_TEST_REPORT.md  README.md  __init__.py  comprehensive_test.py  conftest.py  pytest.ini  run_tests.py
datus-clickzetta/tests/integration/: test_connector_integration.py
datus-clickzetta/tests/unit/: test_config.py  test_utils.py
